--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
 	<link href="./styles/style.css" rel="stylesheet">
 </head>
 <body>
-<div class="slider">
-<!--	<button class="slider_btn"><i class="fa-solid fa-chevron-left fa-2xl"></i></button>-->
-<!--	<img class="slider__image" src="https://media.formula1.com/image/upload/content/dam/fom-website/manual/Misc/2022manual/GettyImages-1437759309.jpg.transform/9col/image.jpg" alt="some image">-->
-<!--	<button class="slider_btn"><i class="fa-solid fa-chevron-right fa-2xl"></i></button>-->
-</div>
+<div class="slider"></div>
 <script src="./scripts/main.js"></script>
 </body>
 </html>
